GithubRestController Class created

--- a/force-app/main/default/lwc/domToImage/domToImage.html
+++ b/force-app/main/default/lwc/domToImage/domToImage.html
@@ -11,5 +11,6 @@
       ></lightning-button>
       <div class="image-container"></div>
     </div>
+    <c-contributions-graph></c-contributions-graph>
   </lightning-card>
 </template>
