homePage component created

--- a/force-app/main/default/lwc/domToImage/domToImage.html
+++ b/force-app/main/default/lwc/domToImage/domToImage.html
@@ -11,6 +11,7 @@
       ></lightning-button>
       <div class="image-container"></div>
     </div>
-    <c-contributions-graph></c-contributions-graph>
+    <c-home-page></c-home-page>
+    <!-- <c-contributions-graph></c-contributions-graph> -->
   </lightning-card>
 </template>
