changes in layout

--- a/force-app/main/default/lwc/contributionsGraph/contributionsGraph.html
+++ b/force-app/main/default/lwc/contributionsGraph/contributionsGraph.html
@@ -497,8 +497,15 @@
           </div>
         </div>
       </div>
-    </div></template
-  >
-  <button onclick={handleConvertToPng}>Convert Image</button>
-  <div class="image-container"></div>
+    </div>
+    <div class="btn-container">
+      <button
+        class="text-center btn btn-primary ml-2 slds-var-m-top_medium"
+        onclick={handleConvertToPng}
+      >
+        Download as PNG
+      </button>
+    </div>
+    <a class="image"></a>
+  </template>
 </template>
